Search or address returns suggestiosn, which is then used to popuilate a geocoder search and then a weather foreast.

--- a/app/views/forecasts/show.html.erb
+++ b/app/views/forecasts/show.html.erb
@@ -1,21 +1,30 @@
 
-<div class="w-full max-w-none">
+<div class="w-full max-w-none flex-col">
   <h1 class="mb-4 text-4xl font-extrabold leading-none tracking-tight md:text-5xl lg:text-6xl ">Weather Forecast</h1>
-  <%= form_tag forecast_path, 
-    class: "bg-white shadow-md rounded px-8 pt-6 pb-8 mb-4" do %>
-    <div class="mb-4">
-      <label class="block text-gray-700 text-sm font-bold mb-2" for="address">
-        Address
-      </label>
-      <%= text_area_tag :address, nil, 
-        placeholder: "Your Street Address",
-        class: "shadow appearance-none border rounded w-full py-2 px-3 text-gray-700 leading-tight focus:outline-none focus:shadow-outline" %>
-    </div> 
-    
-    <div class="md:flex md:items-center">
-      <%= button_tag "Get my local weather forecast!",
-        class: "shadow bg-purple-500 hover:bg-purple-400 focus:shadow-outline focus:outline-none text-white font-bold py-2 px-4 rounded" %>
-    </div>   
+  <%= form_with(url: forecast_path, method: :get, 
+    class: "bg-white shadow-md rounded px-8 pt-6 pb-8 mb-4", data: {
+    controller: "search",
+    action: "keyup->search#suggestions",
+    suggestions_url: search_addresses_path,
+    turbo_stream: true}) do |form| %>
+      <div class="relative">
+        <%= form.text_field :query, data: {
+                search_target: "input",
+                action: "blur->search#hideSuggestions",
+            },
+            class: "my-6 shadow appearance-none border rounded w-full py-2 px-3 text-gray-700 leading-tight focus:outline-none focus:shadow-outline",
+            placeholder: "Your Address", autocomplete: "off" %>
+      </div>
+      <div id="suggestions" class="realtive w-full mt-2 bg-white rounded-lg shadow-lg"
+          data-search-target="suggestions" data-action="mousedown->search#childClicked">
+        <%= render partial: "addresses/suggestions", locals: { results: [] } %>
+      </div>
+      <div class="relative">
+        <%= form.submit "Get my local weather forecast!", 
+          class: "my-6 shadow bg-purple-500 hover:bg-purple-400 focus:shadow-outline focus:outline-none text-white font-bold py-2 px-4 rounded" %>
+      </div>
   <% end %>
-
+  <div id="forecast">
+  
+  </div>
 </div>
