--- a/app/views/forecasts/_forecast.html.erb
+++ b/app/views/forecasts/_forecast.html.erb
@@ -1,12 +1,17 @@
-<%= content_tag :span, "Current temperature: #{forecast["current"]["temperature_2m"]}°C", class: "text-2m" %>
-<%= content_tag :span, "Current weather conditions: #{forecast["current"]["weather_code"]}", class: "text-2m" %>
-<div class="flex flex-row"> 
-    <% forecast["daily"]["time"].each_with_index do |day, index| %>
-        <div class="flex flex-col bg-white shadow-md rounded px-8 pt-6 pb-8 mb-4">
-            <%= content_tag :span, "Day: #{day}", class: "text-2xs" %>
-            <%= content_tag :span, "Max temperature: #{forecast["daily"]["temperature_2m_max"][index]}°C", class: "text-2xs" %>
-            <%= content_tag :span, "Min temperature: #{forecast["daily"]["temperature_2m_min"][index]}°C", class: "text-2xs" %>
-            <%= content_tag :span, "Weather code: #{forecast["daily"]["weather_code"][index]}", class: "text-2xs" %>
-        </div>    
-    <% end %>
-</div>
+<% if @forecast %>
+    <div class="flex flex-col">
+        <%= content_tag :span, "Extended Weather for #{@address} #{ @cached ? '(cached)' : ''}", class: "text-2m" %>
+        <%= content_tag :span, "Current temperature: #{forecast["current"]["temperature_2m"]}°C", class: "text-2m" %>
+        <%= content_tag :span, "Current weather conditions: #{weather_description_from_code(forecast["current"]["weather_code"].to_i)}", class: "text-2m" %>
+        <div class="flex flex-row"> 
+            <% forecast["daily"]["time"].each_with_index do |day, index| %>
+                <div class="flex flex-col bg-white shadow-md rounded px-8 pt-6 pb-8 mb-4">
+                    <%= content_tag :span, Date.parse(day).strftime('%a %d %b %Y'), class: "text-sm" %>
+                    <%= content_tag :span, "High: #{forecast["daily"]["temperature_2m_max"][index]}°C", class: "text-sm" %>
+                    <%= content_tag :span, "Low: #{forecast["daily"]["temperature_2m_min"][index]}°C", class: "text-sm" %>
+                    <%= content_tag :span, weather_description_from_code(forecast["daily"]["weather_code"][index].to_i), class: "text-sm" %>
+                </div>    
+            <% end %>
+        </div>
+    </div>
+<% end %>
